# FakeVim

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  fakevim.pro
.github/: dependabot.yml
.github/workflows/: cmake.yml
cmake/: library.cmake  qt.cmake
example/: CMakeLists.txt  editor.cpp  editor.h  editor.pri  main.cpp
fakevim/: fakevim.pri  fakevimactions.cpp  fakevimactions.h  fakevimhandler.cpp  fakevimhandler.h
fakevim/private/: fakevim_export.h
python/: README.md  build.sh  clean.sh  configure.py  fakevim.sip  fakevimconfig.py.in  fakevimproxy.cpp  fakevimproxy.h  test.py
test/: editor.cpp  editor.h  main.cpp  test.pro
tests/: CMakeLists.txt  fakevim_test.cpp  fakevimplugin.h  tests.pro  vim-test.sh
utils/: generate_fakevim_test.sh  update_from_qtc.ps1  update_from_qtc.sh
utils/patches/: add-patches-for-upstream.patch
